Squashing bug

--- a/src/pages/recipes/recipe/recipe.scss
+++ b/src/pages/recipes/recipe/recipe.scss
@@ -10,15 +10,15 @@
     justify-content: flex-start;
 
     .recipe-img {
-      width: 45vw;
-      height: 25vh;
+      width: 40vw;
+      height: 55vh;
       padding-top: 12%;
       margin-bottom: 10%;
     }
 
     .recipe-instructions {
       width: 45vw;
-      font-size: 4vw;
+      font-size: 1vw;
       line-height: 210%;
       align-self: center;
       margin-top: 0;
